// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs snapshot works as expected 1`] = `ShallowWrapper {}`;

exports[`focus behavior Tab Focus: does not render focus ring after click 1`] = `
.c0 {
  color: #707781;
  cursor: pointer;
}

.c0:active {
  border-bottom-color: #707781;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #C1C6CC;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #939BA5;
  cursor: default;
}

<a
  aria-selected="true"
  class="c0"
  href="tab0"
  id="tab0"
  role="tab"
>
  tab1
</a>
`;

exports[`focus behavior Tab Focus: renders focus ring for keyboard navigation 1`] = `
.c0 {
  color: #707781;
  cursor: pointer;
}

.c0:active {
  border-bottom-color: #707781;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #C1C6CC;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #939BA5;
  cursor: default;
}

<a
  aria-selected="false"
  class="c0"
  href="tab1"
  id="tab1"
  role="tab"
>
  tab2
</a>
`;
